---
source: compiler-core/src/parse/tests.rs
expression: "\nconst a = <<1, 2, <->>\n"
---
----- SOURCE CODE

const a = <<1, 2, <->>


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:2:19
  │
2 │ const a = <<1, 2, <->>
  │                   ^^ I was not expecting this

Found `<-`, expected one of: 
- `>>`
- a bit array segment
